Print usage header within BisqHelpFormatter